Fix title width on small screens

--- a/src/components/PlayDetailsHeader.module.scss
+++ b/src/components/PlayDetailsHeader.module.scss
@@ -34,7 +34,7 @@
     }
 
     .title {
-      min-width: 42ch;
+      min-width: 36ch;
       max-width: 50%;
     }
 
